--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.0",
+    "react-bootstrap-sweetalert": "^4.4.1",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
     "sweetalert-react": "^0.4.11"
